Temporary overflow fix

--- a/assets/styles/partials/_reset.scss
+++ b/assets/styles/partials/_reset.scss
@@ -4,6 +4,10 @@ body {
     padding: 0;
 }
 
+body {
+    overflow-y: hidden; // Temporary
+}
+
 *,
 *:before,
 *:after {
